<resources>
    <string name="app_name">CityCube Provider</string>
    <string name="api_key">AIzaSyAXTJrvnDTC8AjYzK2dPatsSAMJaTIc-c0</string>
    <string name="following">Following</string>
    <string name="continue_with_email">Continue With Email</string>
    <string name="welcome_to">Welcome To</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="email">E - mail</string>
    <string name="phone">Phone</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account ? Sign up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="get_started">Get Started</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="password">Password</string>
    <string name="please_login_to_continue_app">Please login to continue app</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="the_courier_will_look_for_n_your_order_and_deliver_it_to_n_you_in_minutes">The courier will look for <br />your order and deliver it to <br />you in minutes</string>
    <string name="start_by_defining_a_delivery_n_address">Start by defining a delivery<br /> address</string>
    <string name="add_location">Add Location</string>
    <string name="location_pinning">Location pinning</string>
    <string name="departure_address">Departure Address</string>
    <string name="arrieval_address">Arrieval Address</string>
    <string name="continue1">Continue</string>
    <string name="ride_history">My Ride</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_vehicle">Select Vehicle</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="heavy_vehicle">Heavy Vehicle</string>
    <string name="numbers_of_passengers">Number of passengers</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="reversation">Reservation</string>
    <string name="contact_info">Contact Info</string>
    <string name="name">Name</string>
    <string name="parcel_receiver_info">Parcel Receiver Info</string>
    <string name="handling_service">Handling service</string>
    <string name="payment_option">Payment Option</string>
    <string name="pay_on_visit">Pay on Visit(Cash)</string>
    <string name="bill_details">Bill Details</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="live_tracking">Live Tracking</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="order_history">Order History</string>
    <string name="log_out">Log out</string>
    <string name="general">General</string>
    <string name="notification">Notifications</string>
    <string name="leave_a_rating_to_help_us_improve">Leave a rating to, help us improve!</string>
    <string name="my_profile">My Profile</string>
    <string name="promotion">Promotion</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="package_cost">Package Cost</string>
    <string name="to_pay">To pay</string>
    <string name="share_citycube_with_your_friends_and_earn_n_rewards_when_they_join">Share citycube with your friends and earn<br /> rewards when they join</string>
    <string name="share_with_your_friends">Share with your friends</string>
    <string name="redem_discounts_and_ride_credits">Redem discounts and ride credits</string>
    <string name="enter_the_promo_code">Enter The Promo Code</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="submit">Submit</string>
    <string name="change_password">Change Password</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="vehicle_brand">Vehicle Brand</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="vehicle_number_plate">Vehicle Number Plate</string>
    <string name="vehicle_color">Vehicle Color</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="upload_vehicle_image">Upload vehicle image</string>
    <string name="upload_document">upload document</string>
    <string name="add">Add</string>
    <string name="add_account_details">Add Account Details</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_code">Bank Code</string>
    <string name="account_type">Account Type</string>
    <string name="account_number">Account Number</string>
    <string name="add_account">Add Account</string>
    <string name="my_runs">My Runs</string>
    <string name="available_runs">Available Runs</string>
    <string name="settings">Settings</string>
    <string name="where_i_m_going">Where I am going</string>
    <string name="recipient_with_the_delivery_location_address">Recipient with the delivery location address</string>
    <string name="report_an_issue">Report an issue</string>
    <string name="document">Document</string>
    <string name="customer_signature">Customer Signature</string>
    <string name="photos_of_unloading">Photos of unloading</string>
    <string name="number_of_items">Number of Items</string>
    <string name="package_weight">Package Weight</string>
    <string name="where_i_will_end_up">Where I will end up</string>
    <string name="image">Image</string>
    <string name="accept">Accept</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="photos_of_loading">Photos of Loading</string>
    <string name="order_summary">Order Summary</string>
    <string name="my_ride">My Ride</string>
    <string name="active">Active</string>
    <string name="cancel">Cancel</string>
    <string name="invoice">Invoice</string>
    <string name="my_reviews">My Reviews</string>
    <string name="change_your_vehicle_type">Change your Vehicle Type</string>
    <string name="my_review">My Review</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about">About</string>
    <string name="wallet">Wallet</string>
    <string name="current_balance">Current Balance</string>
    <string name="all_transactions">All Transactions</string>
    <string name="withdrawal_money">Withdrawal Money</string>



    <string name="password_does_not_matched">Password doesn\'t matched</string>
    <string name="please_enter_confirm_pass">PLease enter confirm password</string>
    <string name="please_enter_pass">Please enter password</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="please_enter_mobile_number">Please enter phone number</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="wrong_email">Can\'t enter worng email.</string>
    <string name="please_wait">Please wait...</string>
    <string name="network_failure">Sorry! Not connected to internet</string>
    <string name="thank_you_for_signing_up">Thank you for signing up!</string>
    <string name="sign_in_successful">Login successful!</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="select_image_from">Select image from</string>
    <string name="send">Send</string>
    <string name="forgotpasswordtext">Please, enter your email address. You will
       <br /> receive a link to create a new password via <br /> email. </string>
    <string name="link_send_successfully_your_email">Link successfully send your email</string>
    <string name="select_year">Select year</string>
    <string name="please_upload_vehicle_image">Pleae upload vehicle image</string>
    <string name="please_select_service_type">PLease select vehicle type</string>
    <string name="please_select_brand">Please select brand</string>
    <string name="please_select_model">Please select vehicle model</string>
    <string name="please_enter_year">Please enter year</string>
    <string name="please_enter_vehicle_number">Please enter vehicle number</string>
    <string name="please_enter_vehicle_color">Please enter vehicle color</string>
    <string name="new_booking_request">New Booking Request</string>
    <string name="are_you_sure_you_have_accept_booking_request">Are you sure you have accept booking request?</string>
    <string name="no_booking_available">No booking available</string>
    <string name="cancelled">Cancelled</string>
    <string name="start">Start</string>
    <string name="slide_to_unloading_complete">Slide to unloading complete</string>
    <string name="slide_to_start_loading">Slide to start loading</string>

    <string name="place_api_key">AIzaSyC4Eg_qGdkZrcW-td6QsmJAk2g4nzPaat0</string>
    <string name="type_msg">Type message</string>
    <string name="new_chat_msg_user">New chat message from user</string>
    <string name="arrived">Arrived</string>
    <string name="please_upload_loading_image">Please upload loading image.</string>
    <string name="upload">Upload</string>
    <string name="unloading_complete">Unloading complete.</string>
    <string name="unloading_image">Unloadig image</string>
    <string name="take_signature">Take Signature</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="please_add_signature">Please add signature</string>
    <string name="are_you_sure_you_have_arrived_at_departure_location_of_user">Are you sure you have arrived at departure location of user</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_upload_unloading_image">Please upload unloading image</string>
    <string name="your_service_done">"Your service is successfully done "</string>
    <string name="upload_license">Upload License</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="no_rating_available">No rating available</string>
    <string name="english">English</string>
    <string name="french">French</string>

</resources>