<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp"
        android:background="@drawable/bg"
        >
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/logo"
                android:layout_gravity="center_horizontal"
                />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textAllCaps="true"
            android:textSize="@dimen/_22sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_login_to_continue_app"
            android:textSize="@dimen/_14sdp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/email_or_phone_number"
            android:background="@drawable/light_gray_stroke_bg"
            android:gravity="center_vertical"
            android:fontFamily="@font/balootamma2_regular"
            android:padding="@dimen/_15sdp"
            android:imeOptions="actionNext"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_20sdp"
            />

        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:background="@drawable/light_gray_stroke_bg"
            android:padding="@dimen/_15sdp"
            android:imeOptions="actionDone"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:fontFamily="@font/balootamma2_regular"
            android:layout_marginTop="@dimen/_10sdp"
            />

        <TextView
            android:id="@+id/btnForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="@dimen/_12sdp"
            android:layout_gravity="right"
            android:fontFamily="@font/balootamma2_regular"
            android:layout_marginTop="@dimen/_8sdp"
            android:textColor="@color/black"
            android:padding="@dimen/_5sdp"
            />

        <RelativeLayout
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_circular_bg"
            android:paddingVertical="@dimen/_15sdp"
            android:paddingHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/balootamma2_semibold"
                />
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_white_right"
                android:layout_alignParentRight="true"
                />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/black_stroke_circular_bg"
            android:paddingVertical="@dimen/_15sdp"
            android:paddingHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:visibility="gone"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue_with_facebook"
                android:textColor="@color/black"
                android:fontFamily="@font/balootamma2_semibold"
                android:textSize="@dimen/_14sdp"
                />
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/facebook"
                android:layout_alignParentRight="true"
                />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/black_stroke_circular_bg"
            android:paddingVertical="@dimen/_15sdp"
            android:paddingHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:visibility="gone"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue_with_google"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/balootamma2_semibold"

                />
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/google"
                android:layout_alignParentRight="true"
                />

        </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="@dimen/_15sdp"
                >

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnEnglish"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_45sdp"
                    android:text="@string/english"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:fontFamily="@font/baloo_bold"
                    android:textSize="@dimen/_14sdp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textAllCaps="false"/>



                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnFranch"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_45sdp"
                    android:text="@string/french"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:fontFamily="@font/baloo_bold"
                    android:textSize="@dimen/_14sdp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:layout_marginLeft="@dimen/_15sdp"/>



            </LinearLayout>

            <TextView
                android:id="@+id/tvDontHave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account_sign_up"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:textSize="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/balootamma2_regular"
                />


    </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>