<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.AddAccountActivity"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp"
        android:background="@drawable/ic_add_vehicle_bg"
        >
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".activities.SignupActivity"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_account_details"
                    android:textSize="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/account_holder_name"
                    android:background="@drawable/light_gray_stroke_bg"
                    android:padding="@dimen/_15sdp"
                    android:imeOptions="actionNext"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/balootamma2_regular"
                    android:drawablePadding="@dimen/_10sdp"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/bank_name"
                    android:drawablePadding="@dimen/_10sdp"
                    android:background="@drawable/light_gray_stroke_bg"
                    android:padding="@dimen/_15sdp"
                    android:imeOptions="actionNext"
                    android:fontFamily="@font/balootamma2_regular"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center_vertical"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/bank_code"
                    android:drawablePadding="@dimen/_10sdp"
                    android:background="@drawable/light_gray_stroke_bg"
                    android:padding="@dimen/_15sdp"
                    android:imeOptions="actionNext"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/balootamma2_regular"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/account_type"
                    android:drawablePadding="@dimen/_10sdp"
                    android:gravity="center_vertical"
                    android:background="@drawable/light_gray_stroke_bg"
                    android:padding="@dimen/_15sdp"
                    android:fontFamily="@font/balootamma2_regular"
                    android:imeOptions="actionNext"
                    android:layout_marginTop="@dimen/_10sdp"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/account_number"
                    android:drawablePadding="@dimen/_10sdp"
                    android:background="@drawable/light_gray_stroke_bg"
                    android:padding="@dimen/_15sdp"
                    android:imeOptions="actionNext"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/balootamma2_regular"
                    android:layout_marginTop="@dimen/_10sdp"
                    />

                <RelativeLayout
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/blue_circular_bg"
                    android:paddingVertical="@dimen/_15sdp"
                    android:paddingHorizontal="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_account"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sdp"
                        android:fontFamily="@font/balootamma2_semibold"
                        />
                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/ic_white_right"
                        android:layout_alignParentRight="true"
                        />
                </RelativeLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>