<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp"
        tools:context=".activities.SignupActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".activities.SignupActivity">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/sign_up"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_25sdp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/light_gray_stroke_bg"
                    android:drawableLeft="@mipmap/user"
                    android:drawablePadding="@dimen/_10sdp"
                    android:fontFamily="@font/balootamma2_regular"
                    android:gravity="center_vertical"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="@dimen/_15sdp"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/light_gray_stroke_bg"
                    android:drawableLeft="@mipmap/email"
                    android:drawablePadding="@dimen/_10sdp"
                    android:fontFamily="@font/balootamma2_regular"
                    android:gravity="center_vertical"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/_15sdp"
                    android:singleLine="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/light_gray_stroke_bg"
                    android:weightSum="1">


                    <com.hbb20.CountryCodePicker
                        android:id="@+id/ccp"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".3"
                        android:layout_gravity="center"
                        android:gravity="center"

                        />

                    <EditText
                        android:id="@+id/etPhoneNumber"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".7"
                        android:background="@drawable/light_gray_stroke_bg"
                        android:drawableLeft="@mipmap/phone"
                        android:drawablePadding="@dimen/_10sdp"
                        android:fontFamily="@font/balootamma2_regular"
                        android:gravity="center_vertical"
                        android:hint="@string/phone"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="12"
                        android:padding="@dimen/_15sdp"
                        android:singleLine="true" />
                </LinearLayout>



                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/light_gray_stroke_bg"
                    android:drawableLeft="@mipmap/password"
                    android:drawablePadding="@dimen/_10sdp"
                    android:fontFamily="@font/balootamma2_regular"
                    android:gravity="center_vertical"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:padding="@dimen/_15sdp"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/etConfirmPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/light_gray_stroke_bg"
                    android:drawableLeft="@mipmap/password"
                    android:drawablePadding="@dimen/_10sdp"
                    android:fontFamily="@font/balootamma2_regular"
                    android:gravity="center_vertical"
                    android:hint="@string/confirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="@dimen/_15sdp"
                    android:singleLine="true" />

                <RelativeLayout
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@drawable/blue_circular_bg"
                    android:paddingHorizontal="@dimen/_20sdp"
                    android:paddingVertical="@dimen/_15sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/balootamma2_semibold"
                        android:text="@string/sign_up"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sdp" />

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_white_right" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/tvAlreayHave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/balootamma2_regular"
                    android:text="@string/already_have_an_account_login"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>